--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/dashOnlyButton"
-            app:layout_constraintTop_toBottomOf="@+id/mp4OnlyButton"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="8dp"
@@ -25,16 +24,30 @@
             android:layout_marginStart="8dp"/>
 
     <Button
-            android:text="Mp4 only"
+            android:text="Hls after MP4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/mp4OnlyButton"
+            android:id="@+id/hlsAfterMp4Button"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/mp4OnlyButton"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/dashAfterMp4Button"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"/>
+
+    <Button
+            android:text="Mp4 only"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/mp4OnlyButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/dashOnlyButton"/>
 
     <Button
             android:text="Dash after mp4"
@@ -46,7 +59,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="8dp"
+            />
 
     <FrameLayout
             android:id="@+id/playerContainer"
@@ -61,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/guideline"
-            app:layout_constraintGuide_begin="196dp"
+            app:layout_constraintGuide_begin="240dp"
             android:orientation="horizontal"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"/>
